# deck-engine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak2  README.md
include/: Card.hpp  Deck.hpp  Game.hpp
include/controller/: GameController.hpp
include/model/: Card.hpp  Deck.hpp  Game.hpp
include/view/: MainWindow.hpp
src/: Card.cpp  Deck.cpp  Game.cpp  main.cpp  main_gui.cpp
src/controller/: GameController.cpp
src/model/: Card.cpp  Deck.cpp  Game.cpp
src/view/: MainWindow.cpp
